[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
nannou = "0.18"
chrono = "0.4.19"
array2d = "0.2.1"
nannou_egui = "0.5.0"

[[bin]]
name="ref_test"
path="src/bin/refract_test.rs"

[[bin]]
name="hg_phase"
path="src/bin/hg_phase.rs"
